@@ -1,3 +1,7 @@
+2006-06-01  Han-Wen Nienhuys  <hanwen@lilypond.org>
+
+	* scm/stencil.scm (write-system-signature): escape newlines too.
+
 2006-01-01  Graham Percival  <gpermus@gmail.com>
 
 	* Documentation/user/music-glossary.tely: Spanish updates
